--- a/challenge3/webapp/ryuta_t/app/views/energies/show.html.erb
+++ b/challenge3/webapp/ryuta_t/app/views/energies/show.html.erb
@@ -1,6 +1,7 @@
 <h1>Energy Data</h1>
 
 <%= link_to "Energy Data List", energies_path %><br/>
+<%= link_to "House Data List", houses_path %><br/>
 <%= link_to "Add New Energy Data", new_energy_path %><br/>
 <%= link_to "Add New House Data", new_house_path %>
 
