--- a/challenge3/webapp/serizawa/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/serizawa/app/views/layouts/application.html.erb
@@ -6,9 +6,14 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <!--[if lt IE 9]>
+    <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
+    </script>
+    <![endif]-->
   </head>
 
   <body>
     <%= yield %>
+    <%= debug(params) if Rails.env.development? %>
   </body>
 </html>
