--- a/challenge3/webapp/serizawa/app/views/houses/new.html.erb
+++ b/challenge3/webapp/serizawa/app/views/houses/new.html.erb
@@ -1,2 +1,5 @@
-<h1>Houses#new</h1>
-<p>Find me in app/views/houses/new.html.erb</p>
+<h1>New house</h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Back', houses_path %>
