--- a/challenge3/webapp/serizawa/app/views/houses/index.html.erb
+++ b/challenge3/webapp/serizawa/app/views/houses/index.html.erb
@@ -1,5 +1,8 @@
 <h1>House_data</h1>
 
+<%= link_to 'New', new_house_path %>
+
+
 <table>
   <thead>
     <tr>
@@ -22,6 +25,9 @@
         <td><%= house.city %></td>
         <td><%= house.num_of_people %></td>
         <td><%= house.has_child %></td>
+        <td><%= link_to 'Show', house %></td>
+        <td><%= link_to 'Edit', edit_house_path(house) %></td>
+        <td><%= link_to 'Destroy', house, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
