Add integration test energies index test

--- a/challenge3/webapp/serizawa/app/views/energies/index.html.erb
+++ b/challenge3/webapp/serizawa/app/views/energies/index.html.erb
@@ -8,13 +8,13 @@
 <table>
   <thead>
     <tr>
-      <th>Label</th>
-      <th>House</th>
-      <th>Year</th>
-      <th>Month</th>
-      <th>Temperature</th>
-      <th>Daylight</th>
-      <th>Energy production</th>
+      <th>label</th>
+      <th>house</th>
+      <th>year</th>
+      <th>month</th>
+      <th>temperature</th>
+      <th>daylight</th>
+      <th>energy_production</th>
       <th></th>
       <th></th>
       <th></th>
