--- a/challenge3/webapp/hirokishirai/app/assets/stylesheets/layout/_cities.scss
+++ b/challenge3/webapp/hirokishirai/app/assets/stylesheets/layout/_cities.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the cities controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.l-cities-summary-container {
+  overflow: hidden;
+  overflow-x: scroll;
+}
