--- a/challenge3/webapp/hirokishirai/app/views/layouts/application.html.slim
+++ b/challenge3/webapp/hirokishirai/app/views/layouts/application.html.slim
@@ -6,6 +6,9 @@ html
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
+    link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/c3/0.4.11/c3.min.css"
     = javascript_pack_tag 'application', 'data-turbolinks-track': 'reload'
   body
-    = yield
+    .l-container
+      = yield
+    = yield(:additional_javascripts)
