--- a/challenge3/webapp/toshikiokabe/app/views/layouts/application.html.haml
+++ b/challenge3/webapp/toshikiokabe/app/views/layouts/application.html.haml
@@ -5,7 +5,8 @@
     %title Toshikiokabe
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag    'application', media: 'all'
+    = stylesheet_link_tag 'application', media: 'all'
+    = include_gon
     = javascript_include_tag 'application'
   %body
     = yield
