--- a/challenge3/webapp/toshikiokabe/app/views/houses/show.html.haml
+++ b/challenge3/webapp/toshikiokabe/app/views/houses/show.html.haml
@@ -1,2 +1,3 @@
 %h1 Houses#show
-%p Find me in app/views/houses/show.html.haml
+= javascript_pack_tag 'house_graph'
+%canvas{ id: 'HouseChart', width: '400', height: '400' }
