Modify method for chart in house.rb

--- a/challenge3/webapp/ryuta_t/app/views/charts/_house_index_chart.html.erb
+++ b/challenge3/webapp/ryuta_t/app/views/charts/_house_index_chart.html.erb
@@ -1,138 +1,4 @@
 <div style="width: 80%; margin: auto">
   <canvas id="myChart"></canvas>
+  <script>draw_graph();</script>
 </div>
-<script>
-    var ctx = document.getElementById("myChart");
-    var myChart = new Chart(ctx, {
-        type: 'bar',
-        data: {
-            labels: ["2011", "2012", "2013"],
-            datasets: [{
-                label: 'London',
-                data: [
-                    <% 2011.upto(2013) do |i| %>
-                    <%= houses.average_production("London", i, :energy_production) %>,
-                    <% end %>
-                ],
-                backgroundColor: [
-                    'rgba(255, 99, 132, 0.2)',
-                    'rgba(255, 99, 132, 0.2)',
-                    'rgba(255, 99, 132, 0.2)'
-                ],
-                borderColor: [
-                    'rgba(255,99,132,1)',
-                    'rgba(255,99,132, 1)',
-                    'rgba(255,99,132, 1)'
-                ],
-                borderWidth: 1,
-                yAxisID: "y-axis-1"
-            }, {
-                label: 'Oxford',
-                data: [
-                    <% 2011.upto(2013) do |i| %>
-                    <%= houses.average_production("Oxford", i, :energy_production) %>,
-                    <% end %>
-                ],
-                backgroundColor: [
-                    'rgba(54, 162, 235, 0.2)',
-                    'rgba(54, 162, 235, 0.2)',
-                    'rgba(54, 162, 235, 0.2)'
-                ],
-                borderColor: [
-                    'rgba(54, 162, 235,1)',
-                    'rgba(54, 162, 235, 1)',
-                    'rgba(54, 162, 235, 1)'
-                ],
-
-                borderWidth: 1,
-                yAxisID: "y-axis-1"
-            }, {
-                label: 'Cambridge',
-                data: [
-                    <% 2011.upto(2013) do |i| %>
-                    <%= houses.average_production("Cambridge", i, :energy_production) %>,
-                    <% end %>
-                ],
-                backgroundColor: [
-                    'rgba(255, 206, 86, 0.2)',
-                    'rgba(255, 206, 86, 0.2)',
-                    'rgba(255, 206, 86, 0.2)'
-                ],
-                borderColor: [
-                    'rgba(255, 206, 86,1)',
-                    'rgba(255, 206, 86, 1)',
-                    'rgba(255, 206, 86, 1)'
-                ],
-                borderWidth: 1,
-                yAxisID: "y-axis-1"
-            },
-                {
-                    label: 'Amount:London',
-                    type: "line",
-                    fill: false,
-                    data: [
-                        <% 2011.upto(2013) do |i| %>
-                        <%= houses.include_data_for_chart("London", i, :id).count %>,
-                        <% end %>
-                    ],
-                    borderColor: "rgb(255, 0, 0)",
-                    yAxisID: "y-axis-2"
-                },{
-                    label: 'Amount:Oxford',
-                    type: "line",
-                    fill: false,
-                    data: [
-                        <% 2011.upto(2013) do |i| %>
-                        <%= houses.include_data_for_chart("Oxford", i, :id).count %>,
-                        <% end %>
-
-                    ],
-                    borderColor: "rgb(54, 105, 235)",
-                    yAxisID: "y-axis-2"
-                },{
-                    label: 'Amount:Cambridge',
-                    type: "line",
-                    fill: false,
-                    data: [
-                        <% 2011.upto(2013) do |i| %>
-                        <%= houses.include_data_for_chart("Cambridge", i, :id).count %>,
-                        <% end %>
-
-                    ],
-                    borderColor: "rgb(255, 200, 0)",
-                    yAxisID: "y-axis-2"
-                }]
-        },
-        options: {
-            responsive: true,
-            scales: {
-                yAxes: [{
-                    id: "y-axis-1",
-                    scaleLabel: {
-                      display: true,
-                      labelString: "EnergyProduction/per year"
-                    },
-                    type: "linear",
-                    position: "left"
-                    },{
-                    id: "y-axis-2",
-                    scaleLabel: {
-                        display: true,
-                        labelString: "Amount"
-                    },
-                    type: "linear",
-                    position: "right",
-                    ticks: {
-                        max: 100,
-                        min: 0,
-                        stepSize: 5
-                    },
-                    gridLines: {
-                        drawOnChartArea: false
-                    }
-                }
-                ]
-            }
-        }
-    });
-</script>
