--- a/challenge3/webapp/t_miki/app/assets/stylesheets/_house.scss
+++ b/challenge3/webapp/t_miki/app/assets/stylesheets/_house.scss
@@ -6,11 +6,25 @@ h2, h3 {
   text-align: center;
 }
 
-table {
+p {
+  margin-top: 25px;
+  margin-bottom: 0;
+  // &:firts-child {
+  //   margin-bottom: 0;
+  // }
+}
+
+.somedatas {
+  display: flex;
+  width: 760px;
   margin: 0 auto;
+}
+
+table {
   border: 1.5px solid $black;
   background-color: #FFFFF0;
   border-collapse: collapse;
+  flex:1;
 }
 
 th, td {
@@ -32,4 +46,9 @@ a {
   &:hover {
     color: #A9A9A9;
   }
+}
+
+.chart {
+  margin-left: 20px;
+  flex: 1;
 }
