Add data view page

--- a/challenge3/webapp/windyakin/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/windyakin/app/views/layouts/application.html.erb
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Windyakin</title>
+    <title><%= yield(:title) %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= include_gon %>
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js" data-turbolinks-track="true"></script>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
