Add business logic to EnergyDatum model

--- a/challenge3/webapp/m_tanaka/app/assets/stylesheets/custom.scss
+++ b/challenge3/webapp/m_tanaka/app/assets/stylesheets/custom.scss
@@ -1,9 +1,8 @@
-.house-list {
+h1 {
+  font-size: 20px;
+  border-bottom: solid 1px black;
+}
 
-  table{
-    border: solid 1px gray;
-    tr td th{
-      border: solid 1px gray;
-    }
-  }
+h2 {
+  font-size: 18px;
 }
