--- a/challenge3/webapp/m_tanaka/app/views/houses/show.html.slim
+++ b/challenge3/webapp/m_tanaka/app/views/houses/show.html.slim
@@ -1,4 +1,40 @@
-h1 = @house.first_name
+h1 = "Energy date(#{@house.first_name} #{@house.last_name})"
+h2 Average energy_production
+= line_chart [{ name: 'London', data: @london_average },
+        { name: 'Oxford', data: @oxford_average },
+        { name: 'Cambridge', data: @cambridge_average },
+        { name: "#{@house.first_name}'s house", data: @house_average }]
 
-= pie_chart ({ "Football": 10, "Basketball": 5 })
-= column_chart [["Football", 10], ["Basketball", 5]]
+h2 = "Structure of #{@house.first_name} #{@house.last_name}'s family"
+.house-list
+  table border="1" cellspacing="0"
+    tr
+      th Name
+      th City
+      th Num of People
+      th Children
+    tr
+      td = "#{@house.first_name} #{@house.last_name}"
+      td = @house.city
+      td = @house.num_of_people
+      td = @house.has_child
+  = link_to "Back to top", root_path
+
+h2 = "Energy data details of #{@house.first_name} #{@house.last_name}'s house"
+.house-list
+  table border="1" cellspacing="0"
+    tr
+      th Year
+      th Month
+      th Temperature
+      th Daylight
+      th Energy_production
+
+    - @house.energy_data.each do |e|
+      tr
+        td = e.year
+        td = e.month
+        td = e.temperature
+        td = e.daylight
+        td = e.energy_production
+  = link_to "Back to top", root_path
