--- a/challenge3/webapp/th5o/app/views/line_charts/show.html.erb
+++ b/challenge3/webapp/th5o/app/views/line_charts/show.html.erb
@@ -1,3 +1,15 @@
 <h1>LineChart</h1>
 
 <div id="chart"></div>
+
+<script type="text/javascript">
+var chart = c3.generate({
+  bindto: '#chart',
+  data: {
+    columns: [
+      ['data1', 30, 200, 100, 400, 150, 250],
+      ['data2', 50, 20, 10, 40, 15, 25]
+    ]
+  }
+});
+</script>
