--- a/challenge3/webapp/th5o/app/views/bar_charts/show.html.erb
+++ b/challenge3/webapp/th5o/app/views/bar_charts/show.html.erb
@@ -1,3 +1,23 @@
 <h1>BarChart</h1>
 
 <div id="chart"></div>
+
+<script type="text/javascript">
+var chart = c3.generate({
+  bindto: '#chart',
+  data: {
+    columns: [
+      ['data1', 30, 200, 100]
+    ],
+    type: 'bar'
+  },
+  // Category Axis
+  // https://c3js.org/samples/categorized.html
+  axis: {
+    x: {
+      type: 'category',
+      categories: ['Cambridge', 'London', 'Oxford']
+    }
+  }
+});
+</script>
