Add scatter plot to Top

--- a/challenge3/webapp/m_tanaka/app/views/houses/index.html.slim
+++ b/challenge3/webapp/m_tanaka/app/views/houses/index.html.slim
@@ -1,4 +1,8 @@
-h1 House List
+h1 Top
+h2 Scatter plot for Energy productions and daylights
+= scatter_chart @scatter_data, xtitle: "Daylight", ytitle: "Energy Production"
+h2 House List
+
 .house-list
   table border="1" cellspacing="0"
     tr
