--- a/challenge3/webapp/m_tanaka/app/views/layouts/application.html.slim
+++ b/challenge3/webapp/m_tanaka/app/views/layouts/application.html.slim
@@ -9,3 +9,5 @@ html
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
     = yield
+
+= debug(params) if Rails.env.development?
