--- a/challenge3/webapp/m_tanaka/app/views/houses/index.html.slim
+++ b/challenge3/webapp/m_tanaka/app/views/houses/index.html.slim
@@ -2,17 +2,17 @@ h1 Top
 h2 Scatter plot for Energy productions and daylights
 = scatter_chart @scatter_data, xtitle: "Daylight", ytitle: "Energy Production"
 h2 House List
-
+= form_with
 .house-list
   table border="1" cellspacing="0"
     tr
-      th ID
-      th First Name
-      th Last Name
-      th City
-      th Num of People
-      th Children
-      th Details
+      th = sort_link(@q, :id)
+      th = sort_link(@q, :first_name)
+      th = sort_link(@q, :last_name)
+      th = sort_link(@q, :city)
+      th = sort_link(@q, :num_of_people)
+      th = sort_link(@q, :has_child)
+      th Show
 
     - @houses.each do |h|
       tr
@@ -23,7 +23,6 @@ h2 House List
         td = h.num_of_people
         td = h.has_child
         td = link_to "Show", house_path(h)
-
 
 
 
