--- a/challenge3/webapp/th5o/app/views/line_charts/show.html.erb
+++ b/challenge3/webapp/th5o/app/views/line_charts/show.html.erb
@@ -6,10 +6,16 @@
 var chart = c3.generate({
   bindto: '#chart',
   data: {
-    columns: [
-      ['data1', 30, 200, 100, 400, 150, 250],
-      ['data2', 50, 20, 10, 40, 15, 25]
-    ]
+    x: 'x',
+    columns: <%= raw @c3_columns %>
+  },
+  axis: {
+    x: {
+      type: 'timeseries',
+      tick: {
+        format: '%Y-%m'
+      }
+    }
   }
 });
 </script>
