append graph segmented by family attributes

--- a/challenge3/webapp/th5o/app/views/line_charts/show.html.erb
+++ b/challenge3/webapp/th5o/app/views/line_charts/show.html.erb
@@ -1,5 +1,14 @@
 <h1>LineChart</h1>
 
+<%= form_with url: line_chart_path, :method => :get do |form| %>
+  Show with:
+  <%= select_tag("show_with",
+    options_for_select([["Number of people", :num_of_people], ["Has child", :has_child], ["City", :city]], selected: params[:show_with]),
+    include_blank: true,
+    onchange: "this.form.submit();")
+  %>
+<% end %>
+
 <div id="chart"></div>
 
 <script type="text/javascript">
@@ -10,6 +19,12 @@ var chart = c3.generate({
     columns: <%= raw @c3_columns %>
   },
   axis: {
+    y: {
+      label: {
+        text: 'Energy Production (Average)',
+        position: 'outer-middle'
+      }
+    },
     x: {
       type: 'timeseries',
       tick: {
