--- a/challenge3/webapp/th5o/app/views/bar_charts/show.html.erb
+++ b/challenge3/webapp/th5o/app/views/bar_charts/show.html.erb
@@ -1,5 +1,13 @@
 <h1>BarChart</h1>
 
+<%= form_with url: bar_chart_path, :method => :get do |form| %>
+  Category:
+  <%= select_tag("category",
+    options_for_select([["Number of people", :num_of_people], ["Has child", :has_child], ["City", :city]], selected: params[:category]),
+    onchange: "this.form.submit();")
+  %>
+<% end %>
+
 <div id="chart"></div>
 
 <script type="text/javascript">
@@ -7,16 +15,22 @@ var chart = c3.generate({
   bindto: '#chart',
   data: {
     columns: [
-      ['data1', 30, 200, 100]
+      <%= raw @c3_columns %>
     ],
     type: 'bar'
   },
   // Category Axis
   // https://c3js.org/samples/categorized.html
   axis: {
+    y: {
+      label: {
+        text: 'Energy Production (Average)',
+        position: 'outer-middle'
+      },
+    },
     x: {
       type: 'category',
-      categories: ['Cambridge', 'London', 'Oxford']
+      categories: <%= raw @c3_categories %>
     }
   }
 });
