--- a/challenge3/webapp/th5o/app/views/layouts/_menu.html.erb
+++ b/challenge3/webapp/th5o/app/views/layouts/_menu.html.erb
@@ -1,4 +1,4 @@
-<%= link_to 'LineChart', line_chart_path %> |
+<%= link_to 'TimeChart', time_chart_path %> |
 <%= link_to 'BarChart', bar_chart_path %> |
 <%= link_to 'Houses', houses_path %> |
 <%= link_to 'Energies', energies_path %>
