--- a/challenge3/webapp/th5o/app/views/time_charts/show.html.erb
+++ b/challenge3/webapp/th5o/app/views/time_charts/show.html.erb
@@ -1,6 +1,6 @@
-<h1>LineChart</h1>
+<h1>TimeChart</h1>
 
-<%= form_with url: line_chart_path, :method => :get do |form| %>
+<%= form_with url: time_chart_path, :method => :get do |form| %>
   Show with:
   <%= select_tag("show_with",
     options_for_select([["Number of people", :num_of_people], ["Has child", :has_child], ["City", :city]], selected: params[:show_with]),
