--- a/challenge3/webapp/m_tanaka/app/views/layouts/application.html.slim
+++ b/challenge3/webapp/m_tanaka/app/views/layouts/application.html.slim
@@ -2,12 +2,10 @@ doctype html
 html
   head
     title
-      | MTanaka
+      | Challenge3/m_tanaka
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
   body
     = yield
-
-= debug(params) if Rails.env.development?
