--- a/challenge3/webapp/yomiyama/app/views/charts/index.html.slim
+++ b/challenge3/webapp/yomiyama/app/views/charts/index.html.slim
@@ -10,25 +10,47 @@ javascript:
     type: 'bar',
     data: {
       labels: ["London", "Cambridge", "Oxford"],
-      datasets: [{
-        label:"各都市世帯平均発電量",
-        data: #{@energy_average_json},
-        backgroundColor: 'rgba(255, 99, 132, 0.2)',
-        borderColor: 'rgba(255, 99, 132, 1)',
-        borderWidth: 1
-      }]
+      datasets: [
+        {
+          type: 'bar',
+          label:"世帯平均発電量",
+          data: #{@energy_average_json},
+          backgroundColor: 'rgba(255, 99, 132, 0.2)',
+          borderColor: 'rgba(255, 99, 132, 1)',
+          borderWidth: 1,
+          yAxisID: '1'
+        },
+        {
+          type: 'line',
+          label: "世帯平均日射量",
+          data: #{@daylight_average_json},
+          borderColor: 'rgba(54, 162, 235, 0.2)',
+          borderWidth: 1,
+          fill: false,
+          yAxisID: '2'
+        }
+      ]
     },
-    option: {
+    options: {
       scales: {
         yAxes: [{
-          display: true,
-          scaleLabel: {
-            display: true,
-            labelString: "世帯平均発電量"
-          },
+          id: '1',
+          type: 'linear',
+          position: 'left',
           ticks: {
-            min: 0,
-            stepSize: 5000
+            max: 15100,
+            min: 14500,
+            stepSize: 3000
+          }
+        },
+        {
+          id: '2',
+          type: 'linear',
+          position: 'right',
+          ticks: {
+            max: 4490,
+            min: 4450,
+            stepSize: 10
           }
         }]
       }
