--- a/challenge3/webapp/caesaris/app/views/layouts/application.html.slim
+++ b/challenge3/webapp/caesaris/app/views/layouts/application.html.slim
@@ -1,13 +1,7 @@
 doctype html
 html
   head
-    title Iuliana Caesaris
-    = csrf_meta_tags
-    = csp_meta_tag
-    = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
-    = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    = javascript_pack_tag 'application'
-    = stylesheet_pack_tag 'application'
+    = render 'layouts/head'
     = javascript_pack_tag 'hello_vue'
     = stylesheet_pack_tag 'hello_vue'
   body
