--- a/challenge3/webapp/caesaris/app/views/layouts/_head.html.slim
+++ b/challenge3/webapp/caesaris/app/views/layouts/_head.html.slim
@@ -3,5 +3,5 @@ title Iuliana Caesaris
 = csp_meta_tag
 = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
 = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-= javascript_pack_tag 'application'
-= stylesheet_pack_tag 'application'
+/= javascript_pack_tag 'application'
+/= stylesheet_pack_tag 'application'
