--- a/challenge3/webapp/caesaris/app/views/layouts/application.html.slim
+++ b/challenge3/webapp/caesaris/app/views/layouts/application.html.slim
@@ -2,7 +2,7 @@ doctype html
 html
   head
     = render 'layouts/head'
-    = javascript_pack_tag 'hello_vue'
-    = stylesheet_pack_tag 'hello_vue'
+    /= javascript_pack_tag 'hello_vue'
+    /= stylesheet_pack_tag 'hello_vue'
   body
     = yield
