リファクタリング

--- a/challenge3/webapp/ishioka/app/views/cities/index.html.slim
+++ b/challenge3/webapp/ishioka/app/views/cities/index.html.slim
@@ -1,6 +1,6 @@
 h1 = "challenge3 ishioka"
 h2 各都市別の１家庭での平均エネルギー生産量
-= line_chart @average_energies_by_city
+= line_chart @average_energies
 h2 都市別の詳細情報へ
 = form_with
 .city-list
