[Add] Views and Controllers to draw a chart

--- a/challenge3/webapp/daichi5/app/views/layouts/application.html.erb
+++ b/challenge3/webapp/daichi5/app/views/layouts/application.html.erb
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Daichi5</title>
+    <title>Challenge</title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <%= include_gon %>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
