Add error message

--- a/challenge3/webapp/tasukujp/app/views/home/index.html.haml
+++ b/challenge3/webapp/tasukujp/app/views/home/index.html.haml
@@ -7,6 +7,7 @@
   = label_tag :month
   = number_field_tag :month, nil, min: 1, max: 12
   = button_tag 'Search', id: 'search_sum'
+  %span#sum_error_message
 
 %p
   #avg_graph_container
@@ -18,6 +19,7 @@
   = label_tag :has_child
   = select_tag :has_child, options_for_select(Yes: 1, No: 0), include_blank: true
   = button_tag 'Search', id: 'search_avg'
+  %span#avg_error_message
 
 :javascript
   homeIndexFunc();
